# campsite-scanner

./: .env.example  .gitignore  README.md  load-env.sh  pyproject.toml  yosemite_scanner_sms.py
src/camp_scanner/: __init__.py  __main__.py  campgrounds.py  cli.py  config.py  logging_setup.py  monitor.py  recreation_gov.py
src/camp_scanner/messengers/: __init__.py  ntfy.py  twilio.py
